# iLumidi

./: .gitignore  CMakeLists.txt  README.md  git.ignore.txt  iLumidi.jucer  project_notes.txt
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/iLumidi.xcodeproj/: project.pbxproj
Builds/MacOSX/iLumidi.xcodeproj/project.xcworkspace/xcuserdata/jamiebenchia.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/iLumidi.xcodeproj/xcuserdata/jamiebenchia.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h
Midi Logs/: midi_traffic_log.txt
Source/: CustomLookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  git_checkout_experiment.sh
